tests/api/reference/negative/14-match-empty-literal.asm
const invalid: map = match.tokens("=", "name")
